--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^6.1.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "jquery": "^3.6.0",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
@@ -34,6 +35,7 @@
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.5.14",
     "@types/node": "~8.9.4",
     "angular-cli-ghpages": "^1.0.3",
     "codelyzer": "~4.3.0",
